Fixed the issue with the horizontal scroll
The cause of the scroll was due to the animations so i added overflow: hidden; to the container utility class.

--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -28,6 +28,7 @@
     max-width: 968px;
     margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
+    overflow: hidden;
 }
 
 .grid{
